# opengl

./: .gitignore  CMakeLists.txt
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  shadermania
src/: main.cc
triangle/: CMakeLists.txt
triangle/shaders/: triangle.fs
triangle/src/: main.cc  shader.h
